2009-04-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-profile-component.cc:
	advrename profiles: set default template string to "$N" in copy()

2009-04-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-profile-component.cc:
	* src/tags/gnome-cmd-profile-component.h:
	advrename profiles: added copy() method

2009-04-22  Andrey Cherkinskiy

	* src/gnome-cmd-user-actions.cc:
	Fixed problem #579633 (accessing administrator privileges with gksudo)

2009-04-15  <nejc@nejc.info>

	* src/gnome-cmd-rename-dialog.cc:
	Toggle path/basename/filename selections for F2 too

2009-04-07  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Refresh file icon after renaming

	* src/tags/gnome-cmd-tags.cc:
	Properly report unsuported Doc.* tags

	* src/tags/gnome-cmd-profile-component.cc:
	* src/tags/gnome-cmd-profile-component.h:
	advrename profiles: new widget for editing all profile data

	* libgcmd/libgcmd-widget-factory.c:
	* libgcmd/libgcmd-widget-factory.h:
	* src/gnome-cmd-delete-dialog.cc:
	* src/gnome-cmd-list-popmenu.cc:
	* src/gnome-cmd-rename-dialog.cc:
	* src/gnome-cmd-xfer.cc:
	gcc warnings cleanup

2009-04-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.cc:
	Fix for memory leak

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	Refresh MIME information after file renaming

2009-04-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-regex.h:
	regex: fix for g_regex_unref() assertion

2009-03-27  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file-list.cc:
	Fixed problem #576174 (case insensitive file name sorting in non en_US.utf8 locale)

2009-03-24  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-menu.cc:
	i18n: new translation string ("Show terminal")

2009-03-23  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-win.cc:
	Added shortcut CTRL+E to command line history list

2009-03-09  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-data.cc: